--- a/Blazor/Components/Pages/GamePage.razor
+++ b/Blazor/Components/Pages/GamePage.razor
@@ -1,12 +1,17 @@
 ﻿@page "/game/{GameId}/{PlayerNumber}"
 @rendermode InteractiveServer
+@inject NavigationManager navigation 
+@* allows you to change url's *@
 
 Game Tick Number: @game.TickNumber
 
 <br />
 <button @onclick="game.StartGame">Start Game</button>
-<br />
 
+@if (game.GameIsRunning == true)
+{
+    <button @onclick="game.StopGame">End Game</button>
+}
 
 @code {
     [Parameter]
@@ -16,15 +21,21 @@ Game Tick Number: @game.TickNumber
     Game game;
     protected override void OnInitialized()//"constructor for a blazor page"
     {
-        game = GameManager.Games.First(
-        g => g.Id.ToString() == GameId
-        ) ?? throw new Exception("cannot find game");
-        if(PlayerNumber == "1") {
+        Game? foundGame = GameManager.Games.FirstOrDefault
+        (
+            g => g.Id.ToString() == GameId
+        );
+        game = foundGame;
+        if (PlayerNumber == "1")
+        {
             game.Player1 = "1";
         }
-        if(PlayerNumber == "2"){
+        if (PlayerNumber == "2")
+        {
             game.Player2 = "2";
         }
         game.GameUpdated += () => InvokeAsync(StateHasChanged);
     }
+
+    
 }
